Formulator changes

  1.0

    Bugs Fixed

       - Fixed minor bug in year handling of DateTimeField.

       - Now hidden fields also take text from 'extra' property.

       - Fixed bug in MultiItemsWidget; would not deal with only a
         single item being selected.

  0.9.5

    Features Added
 
      - Added FileField (with browse button). Can be used to upload
        files if form is set to multipart/form-data.

      - Added LinkField for URLs.

      - Made ListField and RadioField more tolerant of integer
        (and possibly other) values, not only strings.

      - Made ListField and RadioField happy to deal with non-tuples too in the 
        items list. In this case, the item text and value will be identical.

      - Refactored ListWidget and RadioWidget so they share code; they both
        inherit from SingleItemsWidget now.

      - Added LinesField to submit a list of lines in a textarea.

      - Added MultiListField and MultiCheckBoxField, both use new
        MultiItemsWidget and MultiSelectionValidator.

      - Added EXPERIMENTAL PatternField.

  0.9.4

    Features Added

      - Added API docs for Form, BasicForm and ZMIForm.
 
      - Renamed the confusingly named PythonForm and PythonField to
        ZMIForm and ZMIField, as they are used from the Zope Management
        Interface and not from Python.

      - Added render() method to form for basic form rendering.

      - Added Formulator HOWTO document.

    Bugs Fixed

      - Removed some validation code that wasn't in use anymore (items_method).

      - Removed 'has_field_id' in Form as this duplicated
        the functionality of 'has_field'.

      - Turned <br> in Python sources to <br /> for XHTML compliance.

      - Tweaked radiobutton; text is now closer to the button itself,
        different buttons are further apart.

  0.9.3

    Features Added
      
      - added RadioField for simple display of radio buttons.
